# qelo

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  biome.json  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.integration.setup.ts
dev/stalwart/: README.md  docker-compose.yml  inject-dark-test.mjs  seed.mjs
src/: App.css  App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  lib.rs  main.rs
src/components/composer/: Composer.tsx
src/components/layout/: Shell.tsx  SyncStatus.tsx
src/components/mailbox/: MailboxActions.tsx  MailboxList.tsx
src/components/thread-list/: ThreadList.tsx
src/components/thread-view/: ThreadView.tsx
src/integration/: README.md  compose.itest.ts  harness.ts  loadThread.itest.ts  mailbox-mutations.itest.ts  mutations.itest.ts  openMailbox.itest.ts  paging.itest.ts  recovery.itest.ts  sync.itest.ts
src/jmap/: auth.ts  changes.test.ts  changes.ts  client.test.ts  client.ts  push.test.ts  push.ts  types.ts
src/jmap/methods/: index.test.ts  index.ts
src/lib/: addresses.test.ts  addresses.ts  body.test.ts  body.ts  dark-html.test.ts  dark-html.ts  format.test.ts  format.ts  sanitize.test.ts  sanitize.ts  theme.ts
src/stores/: account.test.ts  account.ts  compose.test.ts  compose.ts  emails.test.ts  emails.ts  mailboxes.test.ts  mailboxes.ts  open-external.test.ts  open-external.ts  push-transport.ts  sync.ts  ui.ts
