[package]
name = "qelo"
version = "0.1.0"
description = "A JMAP email client built with Tauri and SolidJS."
authors = ["Qelo contributors"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qelo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OAuth 2.0 (Authorization Code + PKCE) against the JMAP provider. `stream` powers the
# async EventSource push proxy (browsers can't set an Authorization header on EventSource,
# so the push stream is opened here with the bearer token; see open_push_stream).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "form", "rustls", "stream"] }
tiny_http = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
open = "5"
# `sync` for the Notify-based push cancellation, `macros` for tokio::select! in the stream loop.
tokio = { version = "1", features = ["rt", "sync", "macros"] }
# StreamExt::next over reqwest's byte stream in the push loop.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# OS keychain for token storage — platform-native backends.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

